/* Title for auth picker screen. */
"AuthPickerTitle" = "Welcome";

/* Sign in with email button label. Use short/abbreviated translation for 'email' which is less than 15 chars. */
"SignInWithEmail" = "Sign in with email";

/* Title for email entry screen, email text field placeholder. Use short/abbreviated translation for 'email' which is less than 15 chars. */
"EnterYourEmail" = "Enter your email";

/* Error message displayed when user enters an invalid email address. Use short/abbreviated translation for 'email' which is less than 15 chars. */
"InvalidEmailError" = "That email address isn't correct.";

/* Error message displayed when the app cannot authenticate user's account. */
"CannotAuthenticateError" = "This type of account isn't supported by this app";
...
"ExistingAccountTitle" = "You already have an account";

/* Alert message to let user know what identity provider (second placeholder, ex. Google) was used previously for the email address (first placeholder). */
"ProviderUsedPreviouslyMessage" = "You’ve already used %@. Sign in with %@ to continue.";

/* Title for sign in screen and sign in button. */
"SignInTitle" = "Sign in";

/* Password text field placeholder. */
"EnterYourPassword" = "Enter your password";

/* Error message displayed when user enters an empty password. */
"InvalidPasswordError" = "Password cannot be empty.";

/* Error message displayed when the email and password don't match. Use short/abbreviated translation for 'email' which is less than 15 chars. */
"WrongPasswordError" = "The email and password you entered don't match.";
...
"CantFindProvider" = "Can't find provider for %@.";

/* Error message displayed when after re-authorization current user's email and re-authorized user's email doesn't match. Use short/abbreviated translation for 'email' which is less than 15 chars. */
"EmailsDontMatch" = "Emails don't match";

/* Title for password recovery screen. */
"PasswordRecoveryTitle" = "Recover password";

/* Explanation on how the password of an account can be recovered. Use short/abbreviated translation for 'email' which is less than 15 chars. */
"PasswordRecoveryMessage" = "Get instructions sent to this email that explain how to reset your password.";

/* Title of a message displayed when the email for password recovery has been sent. Use short/abbreviated translation for 'email' which is less than 15 chars. */
"PasswordRecoveryEmailSentTitle" = "Check your email";

/* Message displayed when the email for password recovery has been sent. */
"PasswordRecoveryEmailSentMessage" = "Follow the instructions sent to %@ to recover your password.";

/* Title for sign up screen. */
"SignUpTitle" = "Create account";

/* Name text field placeholder. */
"FirstAndLastName" = "First & last name";

/* Placeholder for the password text field in a sign up form. */
"ChoosePassword" = "Choose password";

/* Text linked to a web page with the Terms of Service content. */
"TermsOfService" = "Terms of Service";

/* Text linked to a web page with the Privacy Policy content. */
"PrivacyPolicy" = "Privacy Policy";
...
"SignUpTooManyTimesError" = "Too many account requests are coming from your IP address. Try again in a few minutes.";

/* Message to explain to the user that password is needed for an account with this email address. */
"PasswordVerificationMessage" = "You’ve already used %@ to sign in. Enter your password for that account.";

/* OK button title. */
"OK" = "OK";

/* Cancel button title. */
"Cancel" = "Cancel";

/* Back button title. */
"Back" = "Back";

/* Next button title. */
"Next" = "Next";

/* Save button title. */
"Save" = "Save";

/* Send button title. */
"Send" = "Send";

/* Resend button title. */
"Resend" = "Resend";

/* Label next to a email text field. Use short/abbreviated translation for 'email' which is less than 15 chars. */
"Email" = "Email";

/* Label next to a password text field. */
"Password" = "Password";

/* Label next to a name text field. */
"Name" = "Name";

/* Alert title Error. */
"Error" = "Error";

/* Alert button title Close. */
"Close" = "Close";

/* Account Settings section title Profile. */
"AS_SectionProfile" = "Profile";

/* Account Settings section title Security. */
"AS_SectionSecurity" = "Security";
...
"EditPasswordTitle" = "Change password";

/* Title of Password/Email provider. Use short/abbreviated translation for 'email' which is less than 15 chars. */
"ProviderTitlePassword" = "Email";

/* Title of Google provider */
"ProviderTitleGoogle" = "Google";

/* Title of Facebook provider */
"ProviderTitleFacebook" = "Facebook";

/* Title of Twitter provider */
"ProviderTitleTwitter" = "Twitter";
...
"PlaceholderNewPassword" = "New password";

/* Placeholder of secret input cell when user changes password. */
"PlaceholderChosePassword" = "Choose password";

/* Title of forgot password button. */
"ForgotPasswordTitle" = "Trouble signing in?";

/* Title of confirm email label. */
"ConfirmEmail" = "Confirm Email";

/* Title of successfully signed in label. */
"SignedIn" = "Signed in!";
...
