/* The text of the button used to sign-in with Phone. */
"SignInWithPhone" = "Sign in with phone";

/* The title of view controller where user enters phone number. */
"EnterPhoneTitle" = "Enter phone number";

/* The title of button on navigation controller which navigates to previous screen. */
"Back" = "Back";

/* The title of button on navigation controller which navigates to the next screen. */
"Next" = "Next";

/* The title of button which user taps on phone verification screen. */
"Verify" = "Verify";

/* Alert message displayed when user submits empty verification code. */
"EmptyVerificationCode" = "Verification code can't be empty";

/* Alert message displayed when user submits empty phone number. */
"EmptyPhoneNumber" = "Phone number can't be empty";

/* Label next to the left of phone number entry field. User shorter version of 'phone number' translation.*/
"PhoneNumber" = "Number";

/* Placeholder shown for phone number input field. */
"EnterYourPhoneNumber" = "Phone number";

/* Label next to the left of country selector control. */
"Country" = "Country";

/* Text of the label shown on the verification screen describing that verification code was sent to phone number. */
"EnterCodeDescription" = "Enter the %@-digit code we sent to";

/* The title of button with resend verification code functionality. */
"ResendCode" = "Resend code";

/* Text of the resend timer label shown on verification phone number screen. */
"ResendCodeTimer" = "Resend code in %@";

/* The title of view controller where user verifies phone number. . */
"VerifyPhoneTitle" = "Verify phone number";

/* The title of button displayed when user closes alert message. */
"Done" = "Done";

/* The title of alert shown when user entered invalid phone number format. */
"IncorrectPhoneTitle" = "Invalid phone number";

/* The body message of alert shown when user entered invalid phone number format. */
"IncorrectPhoneMessage" = "Enter a valid phone number";

/* The body message of alert shown when user tapped resend verification code button. */
"ResendCodeResult" = "Code was sent to %@";

/* The title of alert shown when user entered invalid verification code. */
"IncorrectCodeTitle" = "Incorrect verification code";

/* The body message of alert shown when user entered invalid verification code. */
"IncorrectCodeMessage" = "Wrong code. Try again.";

/* The body message of alert shown when internal server error appeared. */
"InternalErrorMessage" = "Something went wrong. Please try again.";

/* The body message of alert shown when the user has tried to send too many SMS messages. */
"TooManyCodesSent" = "This phone number has been used too many times";

/* The body message of alert shown when Firebase project has tried to send too many SMS messages for its price tier. */
"MessageQuotaExceeded" = "There was a problem verifying your phone number";

/* The body message of alert shown when the SMS confirmation code has expired, so the user should send a new one. */
"MessageExpired" = "This code is no longer valid";

/* Message shown at the footer of the screen before sending SMS confirmation code. The first placeholder is the value of the key "Verify". The second placeholder is the terms of service agreement link, the third placeholder is the privacy policy agreement link. */
"TermsSMS" = "By tapping %@, you are indicating that you accept our %@ and %@. An SMS may be sent. Message & data rates may apply.";
